[#1439] Handle vaadin-generated folder

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ hs_err_pid*
 .gradle
 
 # Ignore Gradle build output directory
-build/*
+/build
 
 # Ignore Buildship pref. files
 org.eclipse.buildship.core.prefs
