[#1482] remove unnecessary dependencies

--- a/ui-vaadin/build.gradle
+++ b/ui-vaadin/build.gradle
@@ -20,9 +20,9 @@ ext {
 }
 
 dependencies {
-	api 'com.vaadin:vaadin-charts-flow'
+	api 'com.vaadin:flow-server'
 	api 'com.vaadin:vaadin-board-flow'
-	
+
 	api project(':ui-common')
 	
 	api 'dev.mett.vaadin:tooltip:1.5.0-alpha'
@@ -36,5 +36,3 @@ dependencyManagement {
 		mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
 	}
 }
-
-
