--- a/api/build.gradle
+++ b/api/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 dependencies {
+	api project(':types')
 	
 	// its needed for the openApi spring codegen
 	implementation 'org.openapitools:jackson-databind-nullable:0.2.1'
@@ -38,6 +39,26 @@ openApiGenerate {
         interfaceOnly: 'true'
     ]
 }
+
+/*
+openApiGenerate {
+    generatorName = "spring"
+    inputSpec = "$rootDir/api/src/main/resources/descriptors/navigation-api.yaml".toString()
+    outputDir = "${projectDir}/${srcGenMainJava}" 
+    modelPackage = "org.smartbit4all.api.navigation.bean"
+    systemProperties = [
+    	models: "", // with this only the model files (the beans) will be generated
+    	//apis: ""
+    ]
+    configOptions = [
+        dateLibrary: "java8",
+        unhandledException: 'true',
+        hideGenerationTimestamp: 'true',
+        useTags: 'true',
+        sourceFolder: '', // without this the generatum is placed under 'src/main/java'
+        interfaceOnly: 'true'
+    ]
+}*/
 
 compileJava {
 //	dependsOn(openApiGenerate)
