[#1652] dynamic-filter-api v1

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -24,8 +24,12 @@ sourceSets {
 openApiGenerate {
     generatorName = "spring"
     inputSpec = "$rootDir/api/src/main/resources/descriptors/query-api.yaml".toString()
+    //inputSpec = "$rootDir/api/src/main/resources/descriptors/navigation-api.yaml".toString()
+    //inputSpec = "$rootDir/api/src/main/resources/descriptors/dynamic-filter-api.yaml".toString()
     outputDir = "${projectDir}/${srcGenMainJava}" 
     modelPackage = "org.smartbit4all.api.query.bean"
+    //modelPackage = "org.smartbit4all.api.navigation.bean"
+    //modelPackage = "org.smartbit4all.api.dynamicfilter.bean"
     systemProperties = [
     	models: "", // with this only the model files (the beans) will be generated
     	//apis: ""
