--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,3 +1,6 @@
+import groovy.io.FileType
+import org.openapitools.generator.gradle.plugin.tasks.GenerateTask
+
 plugins {
 	id "org.openapi.generator" version "4.3.1"
 }
@@ -21,48 +24,41 @@ sourceSets {
     }
 }
 
-openApiGenerate {
-    generatorName = "spring"
-    inputSpec = "$rootDir/api/src/main/resources/descriptors/query-api.yaml".toString()
-    //inputSpec = "$rootDir/api/src/main/resources/descriptors/navigation-api.yaml".toString()
-    //inputSpec = "$rootDir/api/src/main/resources/descriptors/dynamic-filter-api.yaml".toString()
-    outputDir = "${projectDir}/${srcGenMainJava}" 
-    modelPackage = "org.smartbit4all.api.query.bean"
-    //modelPackage = "org.smartbit4all.api.navigation.bean"
-    //modelPackage = "org.smartbit4all.api.dynamicfilter.bean"
-    systemProperties = [
-    	models: "", // with this only the model files (the beans) will be generated
-    	//apis: ""
-    ]
-    configOptions = [
-        dateLibrary: "java8",
-        unhandledException: 'true',
-        hideGenerationTimestamp: 'true',
-        useTags: 'true',
-        sourceFolder: '', // without this the generatum is placed under 'src/main/java'
-        interfaceOnly: 'true'
-    ]
+//here we are going to store swagger files
+def descriptorList = []
+
+//iteration by descriptor file root folder and save into descriptorList variable
+def descriptorPath = "$projectDir/src/main/resources/descriptors/".toString() 
+def dir = new File("$descriptorPath")
+dir.eachFileRecurse(FileType.FILES) { file ->
+    if (file.getName().endsWith(".yaml"))
+        descriptorList << file
 }
 
-/*
-openApiGenerate {
-    generatorName = "spring"
-    inputSpec = "$rootDir/api/src/main/resources/descriptors/navigation-api.yaml".toString()
-    outputDir = "${projectDir}/${srcGenMainJava}" 
-    modelPackage = "org.smartbit4all.api.navigation.bean"
-    systemProperties = [
-    	models: "", // with this only the model files (the beans) will be generated
-    	//apis: ""
-    ]
-    configOptions = [
-        dateLibrary: "java8",
-        unhandledException: 'true',
-        hideGenerationTimestamp: 'true',
-        useTags: 'true',
-        sourceFolder: '', // without this the generatum is placed under 'src/main/java'
-        interfaceOnly: 'true'
-    ]
-}*/
+// Iterate on all descriptor files and generate a task for each one with the nomenclature openApiGenerate + api name
+descriptorList.each {
+    println it.path
+    def apiName = it.getName().replace("-api.yaml", "");
+
+    tasks.create("openApiGenerate" + apiName.capitalize(), GenerateTask.class, {
+        generatorName = "spring"
+	    inputSpec = "$descriptorPath".toString() + "${apiName}-api.yaml"
+	    outputDir = "${projectDir}/${srcGenMainJava}" 
+	    modelPackage = "org.smartbit4all.api.".toString() + "${apiName}.bean"
+	    systemProperties = [
+	    	models: "", // with this only the model files (the beans) will be generated
+	    	//apis: ""
+	    ]
+	    configOptions = [
+	        dateLibrary: "java8",
+	        unhandledException: 'true',
+	        hideGenerationTimestamp: 'true',
+	        useTags: 'true',
+	        sourceFolder: '', // without this the generatum is placed under 'src/main/java'
+	        interfaceOnly: 'true'
+	    ]
+    })
+}
 
 compileJava {
 //	dependsOn(openApiGenerate)
