[#1650] add descriptorName to DynamicFilter

--- a/api/src/main/resources/descriptors/dynamicfilter-api.yaml
+++ b/api/src/main/resources/descriptors/dynamicfilter-api.yaml
@@ -75,6 +75,8 @@ components:
     DynamicFilter:
       type: object
       properties:
+        descriptorName:
+          type: string
         operation:
           $ref: '#/components/schemas/DynamicFilterOperation'
         value1:
