--- a/api/src/main/resources/descriptors/dynamicfilter-api.yaml
+++ b/api/src/main/resources/descriptors/dynamicfilter-api.yaml
@@ -18,6 +18,17 @@ paths:
           description: nope
 components:
   schemas:
+    DynamicFilterConfig:
+      type: object
+      properties:
+        dynamicFilterDescriptors:
+          type: array
+          items:
+            $ref: '#/components/schemas/DynamicFilterDescriptor'
+        dynamicFilterGroupDescriptors:
+          type: array
+          items:
+            $ref: '#/components/schemas/DynamicFilterGroupDescriptor'
     DynamicFilterDescriptor:
       type: object
       description: 'Descriptor of a possible filter field. This field doesn''t have to correspond to an existing entity''s property, it is simple a way of filtering.'
@@ -25,10 +36,23 @@ components:
         name:
           type: string
           description: 'Name of the filterable field.'
+        groupName:
+          type: string
         operations:
           type: array
           items:
             $ref: '#/components/schemas/DynamicFilterOperation'
+    DynamicFilterGroupDescriptor:
+      type: object
+      properties:
+        name:
+          type: string
+        icon:
+          type: string
+        type:
+          $ref: '#/components/schemas/DynamicFilterGroupType'
+        isDefaultSelected:
+          type: boolean
     DynamicFilterOperation:
       type: object
       description: 'Defines a possible way of using a filter field. For example: exact match, like, sounds like, interval, etc.'
@@ -58,6 +82,10 @@ components:
       type: object
       description: 'AND / OR group of filters / groups.'
       properties:
+        name:
+          type: string
+        icon:
+          type: string
         type:
           $ref: '#/components/schemas/DynamicFilterGroupType'
         filters:
