[#1649] add icon code to Value

--- a/api/src/main/resources/descriptors/value-api.yaml
+++ b/api/src/main/resources/descriptors/value-api.yaml
@@ -28,3 +28,6 @@ components:
         typeQName:
           type: string
           description: 'The qualified name of the type of the value'
+        iconCode:
+          type: string
+          description: 'The code of icon that can be associatied with the value. It may be a uri.'
