--- a/ui-vaadin/build.gradle
+++ b/ui-vaadin/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	api 'com.google.code.gson:gson:2.8.6'
 
 	testImplementation 'com.vaadin:vaadin-testbench'
+	
+	api 'org.springframework.boot:spring-boot-autoconfigure:2.3.5.RELEASE'
 }
 
 dependencyManagement {
