[#1925] mage sec-ms365 publishable

--- a/sec-ms365/build.gradle
+++ b/sec-ms365/build.gradle
@@ -23,3 +23,10 @@ dependencyManagement {
     mavenBom "com.microsoft.azure:azure-spring-boot-bom:${azureVersion}"
   }
 }
+
+configurations {
+    [apiElements, runtimeElements].each {
+        it.outgoing.artifacts.removeIf { it.buildDependencies.getDependencies(null).contains(jar) }
+        it.outgoing.artifact(bootJar)
+    }
+}
