--- a/api/src/main/resources/descriptors/filter-api.yaml
+++ b/api/src/main/resources/descriptors/filter-api.yaml
@@ -122,4 +122,5 @@ components:
           type: array
           items:
             type: string
+            format: uri
             #$ref: 'value-api.yaml#/components/schemas/Value'
